--- a/src/haz3lweb/www/style/editor.css
+++ b/src/haz3lweb/www/style/editor.css
@@ -147,6 +147,10 @@ svg.shard.error {
   z-index: var(--err-hole-z);
 }
 
+svg.shard.slicesingle {
+  z-index: var(--slice-z);
+}
+
 svg.shard.selected > path {
   fill: var(--shard-selected);
   stroke-width: 0.5px;
@@ -167,6 +171,18 @@ svg.shard.error > path,
 }
 svg.shard.error > path {
   fill: var(--error-hole-fill);
+}
+
+svg.shard.slicesingle > path,
+.slice .slice-piece svg .child-line {
+  stroke: var(--slice-stroke);
+  stroke-width: 0.75px;
+/*  stroke-dasharray: 1, 1; */ 
+  stroke-linecap: butt;
+}
+
+svg.shard.slicesingle > path {
+  fill: var(--slice-fill);
 }
 
 /* SHARD DROP SHADOWS */
