Make main cell always selected

--- a/src/haz3lweb/www/style/cell.css
+++ b/src/haz3lweb/www/style/cell.css
@@ -51,6 +51,14 @@
   gap: 1em;
 }
 
+.Scratch .cell {
+  background-color: var(--cell-active);
+}
+
+.Documentation .cell {
+  background-color: var(--cell-active);
+}
+
 .cell:has(.code-editor.selected) {
   background-color: var(--cell-active);
 }
